Show checkboxes on IE

--- a/client/public/stylesheets/ie.css
+++ b/client/public/stylesheets/ie.css
@@ -45,3 +45,7 @@ width: 91.35%;
 .action_what_i_bring .small_print {
   margin-top: 0px;
 }
+
+.formtastic ol li.time_slot_day_input input {
+    display: block!important;
+}
