Fix to footer links

--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -13,9 +13,7 @@
               %strong
                 admin
         %li
-          =link_to("legal", "#")
-        %li
-          =link_to("another link", "#")
+          =link_to_slug("Legal", :legal)
         %li
           =link_to("Site map", "/sections") 
                
