--- a/client/app/views/admin/index.html.haml
+++ b/client/app/views/admin/index.html.haml
@@ -102,3 +102,10 @@
       %ul
         %li=link_to("List organisations", organisations_path)
         %li=link_to("New organisation", new_organisation_path)
+    #dash_organisation_groups.dash_item
+      .dash_icon
+      %h3
+        Organisation groups
+      %ul
+        %li=link_to("List organisation groups", organisation_groups_path)
+        %li=link_to("New organisation group", new_organisation_group_path)
