--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -115,8 +115,12 @@ a:hover {
 	line-height:0;
 	margin:0;
 }
+
 .hide {
 	visibility:hidden;
+}
+.overflow_hidden {
+  overflow:hidden;
 }
 
 #header_right {
