Redirect to homepage after signup

--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -20,7 +20,7 @@
 -hidden_title "Spots of Time"
 .row.headline
   .twelvecol
-    We make it easy for you to do fun, inspiring &amp; bite-size activities to benefit people in your community.
+    =flash[:registered].presence || "We make it easy for you to do fun, inspiring &amp; bite-size activities to benefit people in your community."
 #feature_panel_row.row
   .twelvecol
     .feature_panel_left
