--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -27,16 +27,16 @@
   #login_popup
     %h2
       Member Log in
-    - form_tag session_url do
+    .fb_login_link
+      =fb_login_and_redirect("/sessions/create_fb", :scope => 'email', :text => "Login with Facebook")
+    -form_tag session_url do
       #login_form
         %p.login_email
           %label{ :for => "login_email" }
-            Email/Username:
+            Email:
           = text_field_tag 'login_email_or_username', @login_email_or_username
-          = star
         %p.password
           %label{ :for => "login_password" }
             Password:
           = password_field_tag 'login_password'
-          = star
-        = submit_tag 'Log in', :id => 'login_bttn'      
+        = submit_tag 'Log in', :id => 'login_bttn'
