--- a/client/app/views/organisation_groups/index.html.haml
+++ b/client/app/views/organisation_groups/index.html.haml
@@ -3,5 +3,6 @@
   -organisation_groups.each do |organisation_group|
     %li
       =link_to_self(organisation_group)
+      ="(#{pluralize(organisation_group.organisations.count, 'organisation')})"
 
 =options_panel([OrganisationGroup.new])
