--- a/client/app/views/members/show.html.haml
+++ b/client/app/views/members/show.html.haml
@@ -14,12 +14,17 @@
     -if logged_in_as?(@member)
       %p=link_to_box("Edit your bio", edit_bio_member_path(@member))
     -if !@member.time_slot_bookings.starts_at_gt(Time.now).empty?
-      #member_upcoming_spots
+      #member_upcoming_spots.subrow
         %h3="#{forename_or_your(@member, :capitalize => true)} upcoming spots"
-        -@member.time_slot_bookings.starts_at_gt(Time.now).ascend_by_starts_at.each do |booking|
-          =render("members/time_slot_booking", :time_slot_booking => booking)
-            
-            
+        -@member.time_slot_bookings.starts_at_gt(Time.now).ascend_by_starts_at.each_with_index do |booking, idx|
+          %div{:class => "sixcol #{'last' if idx.odd?}"}
+            =render("members/time_slot_booking", :time_slot_booking => booking)
+    -if !@member.time_slot_bookings.starts_at_lt(Time.now).empty?
+      #member_upcoming_spots.subrow
+        %h3="#{forename_or_your(@member, :capitalize => true)} past spots"
+        -@member.time_slot_bookings.starts_at_lt(Time.now).descend_by_starts_at.limit(20).each_with_index do |booking, idx|
+          %div{:class => "sixcol #{'last' if idx.odd?}"}
+            =render("members/time_slot_booking", :time_slot_booking => booking)
 .row
   .twelvecol
     -options_panel do
