--- a/client/app/views/members/show.html.haml
+++ b/client/app/views/members/show.html.haml
@@ -13,16 +13,17 @@
       %p=@member.bio
     -if logged_in_as?(@member)
       %p=link_to_box("Edit your bio", edit_bio_member_path(@member))
-    -if !@member.time_slot_bookings.starts_at_gt(Time.now).empty?
+    -if @member.future_time_slots.present?
       #member_upcoming_spots.subrow
         %h3="#{forename_or_your(@member, :capitalize => true)} upcoming spots"
-        -@member.time_slot_bookings.starts_at_gt(Time.now).ascend_by_starts_at.each_with_index do |booking, idx|
+        -@member.future_time_slots.each_with_index do |booking, idx|
           %div{:class => "sixcol #{'last' if idx.odd?}"}
             =render("members/time_slot_booking", :time_slot_booking => booking)
-    -if !@member.time_slot_bookings.starts_at_lt(Time.now).empty?
+    -if @member.past_time_slots.present?
       #member_upcoming_spots.subrow
         %h3="#{forename_or_your(@member, :capitalize => true)} past spots"
-        -@member.time_slot_bookings.starts_at_lt(Time.now).descend_by_starts_at.limit(20).each_with_index do |booking, idx|
+        %p="#{forename_or_you(@member, "have", :capitalize => true)} taken part in #{pluralize(@member.past_time_slots.count,'spot')}, here are some of the most recent ones."
+        -@member.past_time_slots.limit(20).each_with_index do |booking, idx|
           %div{:class => "sixcol #{'last' if idx.odd?}"}
             =render("members/time_slot_booking", :time_slot_booking => booking)
 .row
