--- a/client/app/views/organisations/show.html.haml
+++ b/client/app/views/organisations/show.html.haml
@@ -28,7 +28,7 @@
         =link_to 'This organisation has not been confirmed yet. Click here to confirm them and make their activities visible on the site.', confirm_organisation_path(@organisation)
     -elsif @organisation.asleep? && allowed_to?(wake_organisation_proc)
       %p.asleep_message
-        =link_to 'This organisation is asleep. Click here to re-activate them and make their activities visible on the site.', wake_organisation_path(@organisation)
+        =link_to 'This organisation is hidden. Click here to re-activate them and make their activities visible on the site.', wake_organisation_path(@organisation)
     .organisation_description    
       =simple_format(@organisation.description)
     -if admin_logged_in?
@@ -76,7 +76,7 @@
       =link_if_allowed("List volunteers", organisation_time_slot_bookings_proc(:organisation_id => @organisation))
       =link_if_allowed("Edit organisation", edit_organisation_proc(@organisation))
       -if @organisation.active?
-        =link_if_allowed("Sleep organisation", sleep_organisation_proc(@organisation), :confirm => "Are you sure you want to 'sleep' this organisation?")
+        =link_if_allowed("Hide organisation", sleep_organisation_proc(@organisation), :confirm => "Are you sure you want to hide this organisation?")
       =link_if_allowed("Delete organisation", @organisation, :method => :delete, :confirm => 'Are you sure you want to delete this organisation?')
       =link_if_allowed("New organisation", new_organisation_proc)
       =link_if_allowed("Attach document", new_organisation_document_proc(:organisation_id => @organisation.id))
