--- a/client/app/views/time_slots/_form.html.haml
+++ b/client/app/views/time_slots/_form.html.haml
@@ -3,8 +3,16 @@
   -form.inputs do
     =form.input :organisation_id, :as => :hidden, :wrapper_html => {:id => "#{unique_id}_organisation_id_input"}, :input_html => {:id => "time_slot_#{time_slot.id}_organisation_id"}
     =form.input :activity_id, :as => :hidden, :wrapper_html => {:id => "#{unique_id}_activity_id_input"}, :input_html => {:id => "#{unique_id}_activity_id"}
-    -TimeSlot::DAYS.each do |day|
-      =form.input day, :wrapper_html => {:class => "time_slot_day_input", :id => "#{unique_id}_#{day}_input"}, :input_html => {:id => "#{unique_id}_#{day}", :disabled => disabled}
+    -if time_slot.new_record? || time_slot.date.present?
+      .time_slot_date{:style => "display:#{time_slot.date.present? ? 'block' : 'none'}"}
+        %li
+          %label Date
+        =form.input :date, :as => :tramlines_date, :disabled => disabled
+    -if time_slot.new_record? || time_slot.date.blank?
+      .time_slot_days{:style => "display:#{time_slot.date.present? ? 'none' : 'block'}"}
+        -TimeSlot::DAYS.each do |day|
+          =form.input day, :wrapper_html => {:class => "time_slot_day_input", :id => "#{unique_id}_#{day}_input"}, :input_html => {:id => "#{unique_id}_#{day}", :disabled => disabled}
+      
     =form.input :starts_at_string, :as => :select, :label => "From", :collection => (0..23).map{|h| ["%02d:00" % h,"%02d:30" % h]}.flatten, :include_blank => false, :wrapper_html => {:id => "#{unique_id}_starts_at_string_input"}, :input_html => {:id => "#{unique_id}_starts_at_string", :disabled => disabled}
     =form.input :ends_at_string, :as => :select, :label => "To", :collection => (0..23).map{|h| ["%02d:00" % h,"%02d:30" % h]}.flatten, :include_blank => false, :wrapper_html => {:id => "#{unique_id}_ends_at_string_input"}, :input_html => {:id => "#{unique_id}_ends_at_string", :disabled => disabled}
     -if !time_slot.errors.on_base.blank?
