--- a/client/app/views/time_slots/index.html.haml
+++ b/client/app/views/time_slots/index.html.haml
@@ -11,7 +11,7 @@
 .row
   .eightcol
     %h1="Activities at #{@organisation}"
-    %p Choose an activity from below and click "Add a new time slot".
+    %p Choose an activity from below and click "Add a weekly time slot" or "Add a one-off time slot".
   .fourcol.last
     -if params[:signup] #just signed up
       =link_to("Skip this for now &rarr;", @organisation, :id => "skip_time_slots_link")
@@ -27,7 +27,9 @@
       %ul.lst{:id => "activity_#{activity.id}_time_slots"}
         -activity.time_slots.organisation_id_is(@organisation.id).each do |time_slot|
           =render("time_slots/time_slot", :time_slot => time_slot)
-      =link_to_function("Add a new time slot", "$(this).next().show();$(this).hide()",:class => "new_time_slot_link")
+      .time_slot_links
+        =link_to_function("Add a weekly time slot", "TimeSlot.showForm(this,0)",:class => "new_time_slot_link")
+        =link_to_function("Add a one-off time slot", "TimeSlot.showForm(this,1)",:class => "new_time_slot_link")
       .new_time_slot_form{:style => "display:none"}
         =render("time_slots/form", :time_slot => activity.time_slots.build(:organisation => @organisation), :disabled => false)
 #signup_next_link_row.row
