Restructured booking on a time_slot

--- a/client/app/views/activities/_organisation_panel.html.haml
+++ b/client/app/views/activities/_organisation_panel.html.haml
@@ -13,12 +13,15 @@
     .fl
       =read_more_truncate(organisation.description) 
   %hr
-  %h4 When can you help out?          
-  =render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at, :organisation => organisation, :activity => activity)
-  -if !(other_activities = organisation.activities.id_is_not(@activity.id)).blank?
-    %h4 Other things you can do here
-    .activity_grid.small_activity_grid
-      -other_activities.each do |activity|
-        -link_to(organisation_activity_path(organisation,activity), :class => "activity") do
-          =image_for(activity, "147x147#")
-          .label=activity
+  #time_slot_date_selector.flcb
+    %h4 When can you help out?
+    =render("time_slots/date_selector", :organisation => organisation, :activity => activity, :selected_date => @selected_date)
+    =#render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at, :organisation => organisation, :activity => activity)
+  .flcb
+    -if !(other_activities = organisation.activities.id_is_not(@activity.id)).blank?
+      %h4 Other things you can do here
+      .activity_grid.small_activity_grid
+        -other_activities.each do |activity|
+          -link_to(organisation_activity_path(organisation,activity), :class => "activity") do
+            =image_for(activity, "147x147#")
+            .label=activity
