--- a/client/app/views/layouts/_header.html.haml
+++ b/client/app/views/layouts/_header.html.haml
@@ -31,7 +31,7 @@
                   %p=organisation
           
     -else
-      =link_to "Login", "#login_popup", :id=>'login_link', :class=>"button"
+      =link_to "Login", "#login_fancybox", :id=>'login_link', :class=>"button"
       =link_to("Signup", new_member_path, :class => 'button')
     .social_media_links  
       =link_to "Like us on Facebook", "http://www.facebook.com/spotsoftimeuk", :target=>"_blank", :class=>"social_media_link facebook_link"
