--- a/client/app/views/members/new.html.haml
+++ b/client/app/views/members/new.html.haml
@@ -17,6 +17,6 @@
         =form.input :forename, :label => "First name", :input_html => {:size => 25}, :wrapper_html => {:class => "inline-fields"}
         =form.input :surname, :label => "Last name", :input_html => {:size => 25}, :wrapper_html => {:class => "inline-fields"}
       -form.buttons do
-        =form.commit_button
+        =form.commit_button "Signup"
     
 =options_panel(:row => true)
