--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -24,7 +24,7 @@
       =link_to("site by <span>Yoomee</span>", "http://www.yoomee.com", :id => "siteby")
 
 %div{:style=>"display:none"}
-  #login_popup
+  #login_fancybox
     %h2
       Member Log in
     .fb_login_link
@@ -39,4 +39,7 @@
           %label{ :for => "login_password" }
             Password:
           = password_field_tag 'login_password'
+        .signup
+          Don't have an account?
+          =link_to("Signup here", new_member_path)
         = submit_tag 'Log in', :id => 'login_bttn'
