--- a/client/app/views/time_slots/_date_selector.html.haml
+++ b/client/app/views/time_slots/_date_selector.html.haml
@@ -1,6 +1,7 @@
 -selected_date ||= organisation.next_available_date_for_activity(activity)
 :javascript
   var BookedDates = #{organisation.existing_bookings_for_activity(activity).to_json};
+  var OneOffDates = #{organisation.one_off_dates_for_activity(activity).to_json};
   $(document).ready(function() {
     $('#time_slot_datepicker').datepicker({
       dateFormat: 'yy-mm-dd',
@@ -10,7 +11,7 @@
         $.get("/organisations/#{organisation.id}/activities/#{activity.id}/time_slots?date=" + dateText);
       },
       beforeShowDay: function(date) {
-        var allowed_on_day = $.inArray(date.getDay(), #{organisation.activity_day_integers(activity).to_json}) == -1 ? false : true;
+        var allowed_on_day = ($.inArray(date.getDay(), #{organisation.activity_day_integers(activity).to_json}) != -1) || ($.inArray(date.toDateString(), OneOffDates) != -1);
         var already_booked =  $.inArray(date.toDateString(), BookedDates) == -1 ? false : true;
         return [!already_booked && allowed_on_day, already_booked ? "already_booked" : "", ""];
       }
