Fixed problem with time-slots when no future date available

--- a/client/app/views/time_slots/_date_selector.html.haml
+++ b/client/app/views/time_slots/_date_selector.html.haml
@@ -5,7 +5,7 @@
   $(document).ready(function() {
     $('#time_slot_datepicker').datepicker({
       dateFormat: 'yy-mm-dd',
-      defaultDate: '#{selected_date.strftime("%Y-%m-%d")}',
+      defaultDate: "#{selected_date.try(:strftime, "%Y-%m-%d") || ''}",
       minDate: (+#{organisation.num_weeks_notice * 7}),
       onSelect: function(dateText, inst) {
         $.get("/organisations/#{organisation.id}/activities/#{activity.id}/time_slots?date=" + dateText);
