--- a/client/app/views/time_slots/_list.html.haml
+++ b/client/app/views/time_slots/_list.html.haml
@@ -2,17 +2,20 @@
   $(document).ready(function() {
     FancyboxLoader.loadAll();  
   });
--time_slots = organisation.time_slots_for_activity(activity).available_on_date(date).ascend_by_starts_at
-%h4#time_slot_date=date.strftime("%A %o %b")
--if same_note = (time_slots.collect(&:note).collect(&:strip).uniq.size == 1)
-  =read_more_truncate(time_slots.first.note, :length => 110)
-.time_slots
-  -time_slots.each do |time_slot|
-    .time_slot
-      %span.timespan=time_slot.timespan
-      -if logged_out?
-        =link_to_login_fancybox("Book", :url => organisation_activity_path(organisation, activity, :date => date.strftime("%Y-%m-%d")), :class => "time_slot_book_link bttn")
-      -else
-        =link_to_box("Book", new_time_slot_time_slot_booking_path(time_slot, :date => date.strftime("%Y-%m-%d")), :class => "time_slot_book_link bttn")
-      -unless same_note
-        .time_slot_note=read_more_truncate(time_slot.note, :length => 100)
+-if date
+  -time_slots = organisation.time_slots_for_activity(activity).available_on_date(date).ascend_by_starts_at
+  %h4#time_slot_date=date.strftime("%A %o %b")
+  -if same_note = (time_slots.collect(&:note).collect(&:strip).uniq.size == 1)
+    =read_more_truncate(time_slots.first.note, :length => 110)
+  .time_slots
+    -time_slots.each do |time_slot|
+      .time_slot
+        %span.timespan=time_slot.timespan
+        -if logged_out?
+          =link_to_login_fancybox("Book", :url => organisation_activity_path(organisation, activity, :date => date.strftime("%Y-%m-%d")), :class => "time_slot_book_link bttn")
+        -else
+          =link_to_box("Book", new_time_slot_time_slot_booking_path(time_slot, :date => date.strftime("%Y-%m-%d")), :class => "time_slot_book_link bttn")
+        -unless same_note
+          .time_slot_note=read_more_truncate(time_slot.note, :length => 100)
+-else
+  %p Unfortunately there are no available time-slots currently. Please check back soon.
