--- a/client/app/views/time_slot_bookings/_new_form.html.haml
+++ b/client/app/views/time_slot_bookings/_new_form.html.haml
@@ -17,5 +17,8 @@
       =form.input :starts_at, :as => :hidden
       =form.input :starts_at_time_string, :as => :select, :collection => @time_slot.possible_time_strings, :include_blank => false, :label => "Time:", :wrapper_html => {:class => "inline-fields"}
       =form.input :notes, :as => :text, :input_html => {:rows => 2}, :label => 'Add a note to the organisation to tell them more about what you plan to do. <br/>e.g. type of performance, craft activity, pamper treat, quiz or game.'
+      -form.semantic_fields_for(:time_slot_answers) do |answers_form|
+        =answers_form.input :time_slot_question_id, :as => :hidden
+        =answers_form.input :text, :as => answers_form.object.question_field_type, :label => answers_form.object.question_text, :input_html => {:rows => 2}
     -form.buttons do
       =form.commit_button "Count me in", :loader => "ajax_loader_squares.gif"
