--- a/client/app/views/organisation_groups/_form.html.haml
+++ b/client/app/views/organisation_groups/_form.html.haml
@@ -1,8 +1,9 @@
 -semantic_form_for organisation_group, :html => {:multipart => true} do |form|
   -form.inputs do
     =form.input :name
-    =form.input :image, :as => :image
     =form.input :description, :input_html => {:rows => 8}
+    =form.input :permalink_name, :label => "Permalink"
+    =form.input :image, :as => :image
   -form.inputs do
     %li
       %h3 Additional questions for volunteers
