--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -20,7 +20,14 @@
 -hidden_title "Spots of Time"
 .row.headline
   .twelvecol
-    =flash[:registered].presence || "We make it easy for you to do fun, inspiring &amp; bite-size activities to benefit people in your community."
+    =flash[:registered].presence || "We create fun, bite-size activities for people to do and for great organisations to benefit from."
+.row.main_options
+  .fourcol
+    =link_to "Get involved", '#', :class => 'button1'
+  .fourcol
+    =link_to_slug "See our projects", :our_work, :class => 'button2'
+  .fourcol.last
+    =link_to_slug "Partner with us", :organisations, :class => 'button3'
 #feature_panel_row.row
   .twelvecol
     .feature_panel_left
@@ -48,21 +55,39 @@
           =photo_for(@blog_post, '626x200')
       -else
         =image_tag("feature-panel.jpg", "data-slide-num" => 2)
-.row.headline.find
+.row.headline
   .twelvecol
-    Find an activity
-  .sixcol.info
-    Find something you'd like to do in our selection below and click through to book. 
-  .sixcol.last.activity
-    -if !Activity.anytime.empty?
-      #activity_filter
-        %span Filter activities by:
-        =#link_to_function("All", "ActivityFilter.filter('all')", :id => "activity_filter_all", :class => "active")
-        =link_to_function("Volunteering", "ActivityFilter.filter('volunteering')", :id => "activity_filter_volunteering", :class => 'active')
-        =link_to_function("Anytime anywhere", "ActivityFilter.filter('anytime')", :id => "activity_filter_anytime")
-  .twelvecol
-    .activity_grid
-      -@activities.each do |activity|
-        -link_to(activity, :class => "activity type_#{activity.activity_type}") do
-          =image_for(activity, "124x124#")
-          .label=activity
+    Explore our activities...
+.row
+  .eightcol.feature_activity
+    .feature_activity_border
+      .feature_activity_inner
+        -link_to(@activity, :class => 'activity') do
+          =image_for(@activity, "124x124#")
+          .label=@activity
+        =@activity.description
+  .fourcol.last.feature_activity_actions
+    =link_to "Do it...", '#', :class => 'first'
+    =link_to "Share it...", {:controller => 'share', :action => 'new', :model_name => 'activity', :id => @activity.id}, :class => 'second'
+    =link_to "See more...", @activity, :class => 'third'
+    
+  
+-if false
+  .row.headline.find
+    .twelvecol
+      Find an activity
+    .sixcol.info
+      Find something you'd like to do in our selection below and click through to book. 
+    .sixcol.last.activity
+      -if !Activity.anytime.empty?
+        #activity_filter
+          %span Filter activities by:
+          =#link_to_function("All", "ActivityFilter.filter('all')", :id => "activity_filter_all", :class => "active")
+          =link_to_function("Volunteering", "ActivityFilter.filter('volunteering')", :id => "activity_filter_volunteering", :class => 'active')
+          =link_to_function("Anytime anywhere", "ActivityFilter.filter('anytime')", :id => "activity_filter_anytime")
+    .twelvecol
+      .activity_grid
+        -@activities.each do |activity|
+          -link_to(activity, :class => "activity type_#{activity.activity_type}") do
+            =image_for(activity, "124x124#")
+            .label=activity
